--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Barra de Reproducción</title>
+  <title>Adam De los Santos:D</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="shortcut icon" href="img/logoyoutube.png" type="image/x-icon">
+
 </head>
 <body>
   <header>
